build_log_5.txt
Resolving dependencies...
Downloading packages...
  device_info_plus 9.1.2 (12.4.0 available)
  flutter_launcher_icons 0.13.1 (0.14.4 available)
  flutter_lints 3.0.2 (6.0.0 available)
  flutter_local_notifications 16.3.3 (21.0.0 available)
  flutter_local_notifications_linux 4.0.1 (8.0.0 available)
  flutter_local_notifications_platform_interface 7.2.0 (11.0.0 available)
  get_it 7.7.0 (9.2.1 available)
! intl 0.20.2 (overridden)
  lints 3.0.0 (6.1.0 available)
  package_info_plus 4.2.0 (9.0.1 available)
  package_info_plus_platform_interface 2.0.1 (3.2.1 available)
  share_plus 10.1.4 (12.0.2 available)
  share_plus_platform_interface 5.0.2 (6.1.0 available)
  timezone 0.9.4 (0.11.0 available)
  win32 5.15.0 (6.0.0 available)
  win32_registry 1.1.5 (3.0.2 available)
  workmanager 0.5.2 (0.9.0+3 available)
Got dependencies!
16 packages have newer versions incompatible with dependency constraints.
Try `flutter pub outdated` for more information.
Running Gradle task 'bundleRelease'...                          
Font asset "MaterialIcons-Regular.otf" was tree-shaken, reducing it from 1645184 to 5444 bytes (99.7% reduction). Tree-shaking can be disabled by providing the --no-tree-shake-icons flag when building your app.
G:\src\flutter\.pub-cache\hosted\pub.dev\flutter_local_notifications-16.3.3\android\src\main\java\com\dexterous\flutterlocalnotifications\FlutterLocalNotificationsPlugin.java:1033: error: reference to bigLargeIcon is ambiguous
      bigPictureStyle.bigLargeIcon(null);
                     ^
  both method bigLargeIcon(Bitmap) in BigPictureStyle and method bigLargeIcon(Icon) in BigPictureStyle match
1 error

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':flutter_local_notifications:compileReleaseJavaWithJavac'.
> Compilation failed; see the compiler output below.
  G:\src\flutter\.pub-cache\hosted\pub.dev\flutter_local_notifications-16.3.3\android\src\main\java\com\dexterous\flutterlocalnotifications\FlutterLocalNotificationsPlugin.java:1033: error: reference to bigLargeIcon is ambiguous
        bigPictureStyle.bigLargeIcon(null);
                       ^
    both method bigLargeIcon(Bitmap) in BigPictureStyle and method bigLargeIcon(Icon) in BigPictureStyle match
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 2m 3s
Running Gradle task 'bundleRelease'...                            124.2s
Gradle task bundleRelease failed with exit code 1
